[tool.poetry]
name = "tao"
version = "0.1.0"
description = ""
authors = ["Ian Tayler <iangtayler@gmail.com>"]
packages = [
  { include = "gradient_descent" },
]

[tool.poetry.dependencies]
python = ">3.9.0,<3.11.0"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]
hypothesis = {extras = ["numpy"], version = "^6.21.5"}
flake8 = "^3.9.2"
black = "^21.9b0"
isort = "^5.9.3"
pdoc = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
